# TestFFmpeg

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/cn/stormbirds/testffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml  config.h
app/src/main/cpp/: cmdutils.h  ffmpeg.c  ffmpeg.h  ffmpeg_cmd.c
app/src/main/cpp/ffmpeg-4.0/: build_android_all.sh  build_android_armeabi_v7a.sh
app/src/main/java/cn/stormbirds/testffmpeg/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/cn/stormbirds/testffmpeg/: ExampleUnitTest.java
